k8s/demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: ${NAMESPACE}

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 80
